# encoding-vfs

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.ps1  install-git-wrapper.ps1  package.ps1  package.sh
.github/workflows/: release.yml
encoding-vfs-cli/: Cargo.toml
encoding-vfs-cli/src/: main.rs  test_drive.rs
encoding-vfs-core/: Cargo.toml
encoding-vfs-core/src/: cache.rs  config.rs  detector.rs  encoding.rs  error.rs  filter.rs  lib.rs  mounts.rs  vfs.rs
encoding-vfs-git-wrapper/: Cargo.toml
encoding-vfs-git-wrapper/src/: main.rs
encoding-vfs-linux/: Cargo.toml
encoding-vfs-linux/src/: fuse_host.rs  lib.rs
encoding-vfs-test/src/: main.rs
encoding-vfs-windows/: Cargo.toml  build.rs
encoding-vfs-windows/lib/: export_names.txt  generate_def.sh  winfsp-x64.def
encoding-vfs-windows/src/: lib.rs  winfsp_host.rs
