[package]
name = "encoding-vfs-core"
version = "0.1.5"
edition = "2021"
description = "Cross-platform encoding VFS core: GBK <-> UTF-8 transparent conversion"

[dependencies]
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
dashmap = "5.5.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.8"
thiserror = "1.0.50"
tracing = "0.1.40"
globset = "0.4.18"
dirs = "5.0"
