[package]
name = "encoding-vfs-git-wrapper"
version = "0.2.0"
edition = "2021"
description = "Transparent git wrapper for encoding-vfs: auto-maps git commands to source directory"

[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
encoding-vfs-core = { path = "../encoding-vfs-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
