[package]
name = "encoding-vfs-linux"
version = "0.1.8"
edition = "2021"
description = "FUSE adapter for encoding-vfs: mounts GBK files as UTF-8 virtual directory"

[features]
default = []

[dependencies]
encoding-vfs-core = { path = "../encoding-vfs-core" }
libc = "0.2"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.14"
